--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -141,16 +141,17 @@
                     android:alpha="1"
                     android:scaleType="fitXY" />
 
-                <!--<ImageView
+                <!---<ImageView
                     android:id="@+id/btn_tv"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_gravity="center|center"
-                    android:layout_marginBottom="-70dp"
                     android:layout_marginEnd="-70dp"
+                    android:layout_marginBottom="-70dp"
+                    android:animateLayoutChanges="true"
+                    android:clickable="true"
                     android:contentDescription="@string/app_name"
                     android:elevation="10dp"
-                    android:animateLayoutChanges="true"
                     android:src="@drawable/television"
                     tools:ignore="UselessParent" />-->
                 <FrameLayout
